--- a/CS M117/CS M117/GoogleService-Info.plist
+++ b/CS M117/CS M117/GoogleService-Info.plist
@@ -23,15 +23,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>csm117-8114c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:446780829099:ios:5c66898fe210a9cb</string>
 	<key>DATABASE_URL</key>
